[package]
name = "bminesweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
rand = "0.9.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
panic = "abort"
opt-level = 1
debug = 0
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = "z"