[package]
name = "bminesweeper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "default_app",
    "default_platform",
    "2d_bevy_render",
    "ui_bevy_render",
    "scene",
    "picking",
] }
bevy_kira_audio = { version = "0.25.0", features = ["wav"] }
rand = "0.9.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
panic = "abort"
opt-level = 1
debug = 0
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = "z"